# geo_simulator

./: .gitignore  Cargo.toml  README.md  THEORY.md  run_simulation.sh
benchmarks/: README.md  convergence_test.rs  core_complex.rs  elasticity_halfspace_gravity.rs  elasticity_patch_test.rs  maxwell_stress_relaxation.rs  mesh_comparison.rs  mesh_quality.rs  mesh_smoothing_distorted.rs  newton_simple.rs  picard_simple.rs  plastic_shear_banding.rs  thermal_1d_improved_mesh.rs  topography_relaxation.rs  tracer_accuracy.rs  two_layer_couette.rs  two_layer_extension.rs  viscous_couette_flow.rs  winkler_point_load.rs
benchmarks/shape_functions/: mod.rs
inputs/core_complex_2d/: config.toml  config_debug_single_material.toml  config_des3d_style.toml  config_quick_test.toml
src/: bc.rs  config.rs  ic.rs  ic_bc.rs  lib.rs  mesh_generator.rs  mesh_generator_improved.rs  updates.rs
src/fem/: assembly.rs  basis.rs  boundary.rs  dof.rs  element.rs  mod.rs  quadrature.rs  time_integration.rs
src/linalg/: amg.rs  anderson.rs  direct.rs  iterative.rs  jfnk.rs  mod.rs  picard.rs  preconditioner.rs  scaling.rs  solver.rs
src/mechanics/: body_force.rs  constitutive.rs  element.rs  mod.rs  plasticity.rs  strain.rs  stress_update.rs  winkler.rs
src/mesh/: fields.rs  geometry.rs  mod.rs  quality.rs  state.rs  topology.rs  tracers.rs  vtk_writer.rs
src/physics/: mod.rs  pressure.rs  surface_processes.rs  thermal.rs
src/timestepping/: adaptive.rs  mod.rs
src/utils/: mod.rs  units.rs
tests/: benchmarks.rs  curved_element.rs  incompressibility_test.rs
