[package]
name = "geo_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33"
rayon = "1.10"
sprs = "0.11"
rand = "0.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

# Production example
[[bin]]
name = "thermal_solver_demo"
path = "src/bin/thermal_solver_demo.rs"

# Validation benchmarks
[[bin]]
name = "thermal_1d_improved_mesh"
path = "benchmarks/thermal_1d_improved_mesh.rs"

[[bin]]
name = "mesh_comparison"
path = "benchmarks/mesh_comparison.rs"

[[bin]]
name = "mesh_quality"
path = "benchmarks/mesh_quality.rs"

[[bin]]
name = "elasticity_halfspace_gravity"
path = "benchmarks/elasticity_halfspace_gravity.rs"

[[bin]]
name = "elasticity_patch_test"
path = "benchmarks/elasticity_patch_test.rs"

[[bin]]
name = "viscous_couette_flow"
path = "benchmarks/viscous_couette_flow.rs"

[[bin]]
name = "maxwell_stress_relaxation"
path = "benchmarks/maxwell_stress_relaxation.rs"

[[bin]]
name = "convergence_test"
path = "benchmarks/convergence_test.rs"

[[bin]]
name = "plastic_shear_banding"
path = "benchmarks/plastic_shear_banding.rs"

[[bin]]
name = "tracer_accuracy"
path = "benchmarks/tracer_accuracy.rs"

[[bin]]
name = "core_complex"
path = "benchmarks/core_complex.rs"

[[bin]]
name = "picard_simple"
path = "benchmarks/picard_simple.rs"

[[bin]]
name = "newton_simple"
path = "benchmarks/newton_simple.rs"

[[bin]]
name = "core_complex_2d"
path = "benchmarks/core_complex_2d.rs"

[[bin]]
name = "two_layer_extension"
path = "benchmarks/two_layer_extension.rs"

[[bin]]
name = "two_layer_couette"
path = "benchmarks/two_layer_couette.rs"

[[bin]]
name = "topography_relaxation"
path = "benchmarks/topography_relaxation.rs"

[[bin]]
name = "extension_free_surface"
path = "benchmarks/extension_free_surface.rs"

[[bin]]
name = "winkler_point_load"
path = "benchmarks/winkler_point_load.rs"

[[bin]]
name = "extension_with_winkler"
path = "benchmarks/extension_with_winkler.rs"

[[bin]]
name = "mesh_smoothing_distorted"
path = "benchmarks/mesh_smoothing_distorted.rs"
